--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@gbase/ng-pwa-shell": "3.0.4",
     "@material-ui/core": "4.11.2",
     "@material-ui/icons": "4.11.2",
+    "material-ui-avatar-picker": "1.0.4",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-router-dom": "5.2.0",
